framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_unfinished_generic.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B();
                let a: Array<number = []; // missing '>'
            }
        }
        $B {
        }
}

